Add ability to post to multiple accounts

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -8,3 +8,20 @@ mastodon {
   username = "CHANGEME"
   password = "CHANGEME"
 }
+
+// If using multiple mastodon accounts, and copying 1-to-1 from twitter accounts, you can use the following structure.
+// You will still need to define a twitter.bearer token, mastodon.baseUrl and mastodon.applicationName above
+// If multiaccount is defined, the following structure will be expected
+// and the mastodon.username, mastodon.password, and twitter.followUser fields will be ignored
+//multiAccount = [
+//  {
+//    follow = "MBTA",
+//    mastodonUsername = "CHANGEME",
+//    mastodonPassword = "CHANGEME"
+//  },
+//  {
+//    follow = "MBTA_CR",
+//    mastodonUsername = "CHANGEME",
+//    mastodonPassword = "CHANGEME"
+//  }
+//]
